@@ -2,6 +2,7 @@ package dk.lalan.backgroundapp_group_5;
 
 import android.app.IntentService;
 import android.content.Intent;
+import android.util.Log;
 
 /**
  * Created by lalan on 07/09/15.
@@ -15,8 +16,15 @@ public class BackgroundService extends IntentService {
     @Override
     protected void onHandleIntent(Intent intent) {
         String message = intent.getStringExtra("message");
-        int delay = new Integer(intent.getStringExtra("delay"));
+        int delay = Integer.valueOf(intent.getStringExtra("delay"))*1000;
 
-        
+        try {
+            Thread.sleep(delay);
+        } catch (InterruptedException e) {
+            Log.e("Error", "*** ThreadFEJL!!! ");;
+        }
+        Intent activityB = new Intent(getApplicationContext(), ActivityB.class);
+        activityB.putExtra("message", message);
+        startActivity(activityB);
     }
 }
